--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>test list</title>
-    
+
 </head>
 <body>
     <ul>
         <a href="todo.html"><li>TODO with React and ajax</li></a>
+        <a href="browser_test.html">Browser test </a>
     </ul>
 </body>
 </html>
